--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:layout_margin="64dp"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
