--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,10 +2,15 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
     <color name="redish">#FFFF4900</color>
+    <color name="redish30">#4DFF4900</color>
     <color name="orangellow">#FFFFAF00</color>
     <color name="freshgreen">#FFABC600</color>
+
     <color name="background_light">#FFABC600</color>
     <color name="background_dark">#FFABC600</color>
 
+    <color name="element_background">#1A000000</color>
+    <color name="element_background_dark">#1AFFFFFF</color>
 </resources>
