--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -11,18 +11,18 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
     </LinearLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation"
-        style="@style/BottomNavigationViewStyle"
+        style="@style/BotNavViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:background="@drawable/nav_bg_rounded"
+        app:itemActiveIndicatorStyle="@style/BotNavView_CustomIndicator"
         app:labelVisibilityMode="labeled"
         app:menu="@menu/bottom_app_bar_menu">
 
