--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -5,8 +5,10 @@
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
         <item name="fontFamily">@font/poppins_semibold</item>
         <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="Theme.Manga_App" parent="Base.Theme.Manga_App">
+        <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/black</item>
         <item name="backgroundColor">@color/black</item>
         <item name="background">@color/black</item>
@@ -15,9 +17,19 @@
     <style name="BotNavViewStyle" parent="Widget.Material3.BottomNavigationView">
         <item name="itemTextColor">@color/bot_nav_view_night</item>
         <item name="itemIconTint">@color/bot_nav_view_night</item>
-        <item name="android:background">@drawable/nav_bg_rounded_dark</item>
+        <item name="android:background">@drawable/panel_grad_border_dark</item>
     </style>
     <style name="BotNavView_CustomIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">@color/redish30</item>
+    </style>
+    <style name="PanelGradBorder">
+        <item name="android:background">@drawable/panel_grad_border_dark</item>
+        <item name="android:padding">48px</item>
+    </style>
+    <style name="SplashScreen">
+        <item name="srcCompat">@drawable/logo_vertical_dark</item>
+    </style>
+    <style name="EditText">
+        <item name="android:background">@drawable/bg_rounded_dark</item>
     </style>
 </resources>
