--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -5,6 +5,7 @@
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="fontFamily">@font/poppins_semibold</item>
         <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textColor">@color/black</item>
     </style>
     <style name="Theme.Manga_App" parent="Base.Theme.Manga_App">
         <item name="colorPrimary">@color/black</item>
@@ -16,9 +17,23 @@
     <style name="BotNavViewStyle" parent="Widget.Material3.BottomNavigationView">
         <item name="itemTextColor">@color/bot_nav_view</item>
         <item name="itemIconTint">@color/bot_nav_view</item>
-        <item name="android:background">@drawable/nav_bg_rounded</item>
+        <item name="android:background">@drawable/panel_grad_border</item>
     </style>
     <style name="BotNavView_CustomIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">@color/redish30</item>
+    </style>
+    <style name="PanelGradBorder">
+        <item name="android:background">@drawable/panel_grad_border</item>
+        <item name="android:padding">48px</item>
+    </style>
+    <style name="SplashScreen">
+        <item name="srcCompat">@drawable/logo_vertical</item>
+    </style>
+    <style name="EditText" parent="android:Widget.EditText">
+        <item name="android:background">@drawable/bg_rounded</item>
+    </style>
+    <style name="Button" parent="android:Widget.Button">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:background">@color/redish</item>
     </style>
 </resources>
