--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,6 +7,9 @@
         <item name="android:fontFamily">@font/poppins_semibold</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:includeFontPadding">false</item>
+        <item name="android:textCursorDrawable">@drawable/cursor_color</item>
+        <item name="colorControlActivated">@color/redish</item>
+        <item name="android:textColorHighlight">@color/redish30</item>
     </style>
     <style name="Theme.Manga_App" parent="Base.Theme.Manga_App">
         <item name="colorPrimary">@color/black</item>
@@ -43,6 +46,7 @@
         <item name="cornerRadius">32px</item>
         <item name="android:insetTop">0px</item>
         <item name="android:insetBottom">0px</item>
+        <item name="android:textSize">16sp</item>
     </style>
     <style name="ClickableTextView">
         <item name="android:textColor">@color/redish</item>
