--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,16 +34,17 @@
                 android:id="@+id/textViewSubtitle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8sp"
+                android:layout_marginEnd="8sp"
                 android:text="@string/subtitle_login" />
 
             <TextView
                 android:id="@+id/textViewSubtitleBtn"
                 style="@style/ClickableTextView"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0"
-                android:text="@string/subtitle_login_btn" />
+                android:layout_weight="1"
+                android:text="@string/subtitle_login_btn"
+                android:imeOptions="actionDone"/>
         </LinearLayout>
 
         <EditText
@@ -55,7 +56,8 @@
             android:ems="10"
             android:fontFamily="@font/poppins_regular"
             android:hint="@string/hint_login_email"
-            android:inputType="textEmailAddress" />
+            android:inputType="textEmailAddress"
+            android:autofillHints="emailAddress" />
 
         <EditText
             android:id="@+id/editTextTextPassword"
@@ -65,7 +67,8 @@
             android:layout_marginTop="16dp"
             android:ems="10"
             android:hint="@string/hint_login_password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:autofillHints="password"/>
 
         <Button
             android:id="@+id/btnLogin"
