--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,9 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".RegisterActivity">
+    android:gravity="center"
+    android:padding="24dp"
+    tools:context=".LoginActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:id="@+id/registerContainer"
+        style="@style/PanelGradBorder"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:padding="22dp">
+
+        <TextView
+            android:id="@+id/textViewRegister"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/title_register"
+            android:textSize="24sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:id="@+id/subtitleLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textViewSubtitle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8sp"
+                android:text="@string/subtitle_register" />
+
+            <TextView
+                android:id="@+id/textViewSubtitleBtn"
+                style="@style/ClickableTextView"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="@string/subtitle_register_btn" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginTop="16dp">
+
+            <EditText
+                android:id="@+id/editTextRegFirstname"
+                style="@style/EditText"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_marginEnd="16sp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:fontFamily="@font/poppins_regular"
+                android:hint="@string/hint_register_firstname"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:nextFocusForward="@id/editTextRegLastname"
+                android:imeOptions="actionNext"/>
+
+            <EditText
+                android:id="@+id/editTextRegLastname"
+                style="@style/EditText"
+                android:layout_width="0dp"
+                android:layout_height="48dp"
+                android:layout_weight="1"
+                android:ems="10"
+                android:fontFamily="@font/poppins_regular"
+                android:hint="@string/hint_register_lastname"
+                android:importantForAutofill="no"
+                android:inputType="text"
+                android:nextFocusForward="@id/editTextRegUsername" />
+        </LinearLayout>
+
+        <EditText
+            android:id="@+id/editTextRegUsername"
+            style="@style/EditText"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="@string/hint_register_username"
+            android:inputType="text"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/editTextRegEmail"
+            style="@style/EditText"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:fontFamily="@font/poppins_regular"
+            android:hint="@string/hint_register_email"
+            android:inputType="textEmailAddress"
+            android:importantForAutofill="no" />
+
+        <EditText
+            android:id="@+id/editTextRegPassword"
+            style="@style/EditText"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="@string/hint_login_password"
+            android:inputType="textPassword"
+            android:importantForAutofill="no"/>
+
+        <EditText
+            android:id="@+id/editTextRegRepeatPassword"
+            style="@style/EditText"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:ems="10"
+            android:hint="@string/hint_register_repeat_password"
+            android:inputType="textPassword"
+            android:importantForAutofill="no"
+            android:imeOptions="actionDone"/>
+
+        <Button
+            android:id="@+id/btnRegister"
+            style="@style/ButtonCustom"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:layout_marginTop="16dp"
+            android:gravity="center|center_horizontal|center_vertical"
+            android:minWidth="0dp"
+            android:minHeight="0dp"
+            android:text="@string/btn_register"
+            app:icon="@drawable/login_24"
+            app:iconGravity="textEnd" />
+    </LinearLayout>
+</LinearLayout>
