--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,7 +28,7 @@
     </style>
     <style name="PanelGradBorder">
         <item name="android:background">@drawable/panel_grad_border</item>
-        <item name="android:padding">48px</item>
+        <item name="android:padding">48dp</item>
     </style>
     <style name="SplashScreen">
         <item name="srcCompat">@drawable/logo_vertical</item>
@@ -43,12 +43,28 @@
         <item name="android:textColor">@color/black</item>
         <item name="iconTint">@color/black</item>
         <item name="android:backgroundTint">@color/redish</item>
-        <item name="cornerRadius">32px</item>
+        <item name="cornerRadius">32dp</item>
         <item name="android:insetTop">0px</item>
         <item name="android:insetBottom">0px</item>
         <item name="android:textSize">16sp</item>
     </style>
     <style name="ClickableTextView">
         <item name="android:textColor">@color/redish</item>
+    </style>
+    <style name="topBar">
+        <item name="android:layout_height">64dp</item>
+        <item name="android:padding">8dp</item>
+    </style>
+    <style name="topBarImage">
+        <item name="srcCompat">@drawable/lab_manager_logo_horizontal_dark</item>
+    </style>
+    <style name="topBarBtn">
+        <item name="android:backgroundTint">@color/transparent</item>
+        <item name="android:scaleType">fitCenter</item>
+        <item name="android:adjustViewBounds">true</item>
+        <item name="tint">@color/black</item>
+    </style>
+    <style name="equipmentDeviceCard" parent="">
+        <item name="android:background">@drawable/bg_rounded</item>
     </style>
 </resources>
