--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,14 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="64dp"
     android:gravity="center"
+    android:orientation="vertical"
+    android:padding="64dp"
     tools:context=".SplashActivity">
 
     <ImageView
         android:id="@+id/imageView"
         style="@style/SplashScreen"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="256dp"
+        android:adjustViewBounds="true"
         android:scaleType="fitCenter" />
+
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:indeterminate="true"
+        app:trackCornerRadius="100dp" />
 </LinearLayout>
