--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,6 +10,7 @@
         <item name="android:textCursorDrawable">@drawable/cursor_color</item>
         <item name="colorControlActivated">@color/redish</item>
         <item name="android:textColorHighlight">@color/redish30</item>
+        <item name="android:windowActivityTransitions">true</item>
     </style>
     <style name="Theme.Manga_App" parent="Base.Theme.Manga_App">
         <item name="colorPrimary">@color/black</item>
@@ -64,7 +65,35 @@
         <item name="android:adjustViewBounds">true</item>
         <item name="tint">@color/black</item>
     </style>
-    <style name="equipmentDeviceCard" parent="">
+    <style name="equipmentDeviceCard">
         <item name="android:background">@drawable/bg_rounded</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:orientation">vertical</item>
+        <item name="android:layout_marginBottom">16dp</item>
+    </style>
+    <style name="equipmentDeviceCardVolume">
+        <item name="android:orientation">horizontal</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_vertical</item>
+    </style>
+    <style name="equipmentDeviceCardVolumeBar" parent="Widget.MaterialComponents.LinearProgressIndicator">
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginHorizontal">16dp</item>
+    </style>
+    <style name="equipmentDeviceCardVolumeValue">
+        <item name="android:layout_weight">0</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+    </style>
+    <style name="equipmentDeviceCardText">
+        <item name="android:textSize">18sp</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+    </style>
+    <style name="iconTint">
+        <item name="tint">@color/black</item>
+        <item name="android:tint">@color/black</item>
+        <item name="drawableTint">@color/black</item>
     </style>
 </resources>
