--- a/app/src/main/res/layout/fragment_equipment.xml
+++ b/app/src/main/res/layout/fragment_equipment.xml
@@ -5,4 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".EquipmentFragment" />
+    tools:context=".EquipmentFragment" >
+
+    <LinearLayout
+        android:id="@+id/equipmentList"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"></LinearLayout>
+</ScrollView>
