--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -15,6 +15,7 @@
     <style name="Theme.Manga_App" parent="Base.Theme.Manga_App">
         <item name="colorPrimary">@color/white</item>
         <item name="colorPrimaryDark">@color/black</item>
+        <item name="android:windowLightStatusBar">false</item>
         <item name="backgroundColor">@color/black</item>
         <item name="background">@color/black</item>
         <item name="android:windowBackground">@color/black</item>
@@ -26,6 +27,13 @@
     </style>
     <style name="BotNavView_CustomIndicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
         <item name="android:color">@color/redish30</item>
+    </style>
+    <style name="customRoundPanel">
+        <item name="android:background">@drawable/bg_rounded_dark</item>
+    </style>
+    <style name="profileImage">
+        <item name="android:background">@drawable/bg_rounded_dark</item>
+        <item name="android:clipToOutline">true</item>
     </style>
     <style name="PanelGradBorder">
         <item name="android:background">@drawable/panel_grad_border_dark</item>
