--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -104,4 +104,8 @@
         <item name="android:tint">@color/black</item>
         <item name="drawableTint">@color/black</item>
     </style>
+    <style name="settings_option">
+        <item name="android:background">@drawable/bg_rounded</item>
+        <item name="android:padding">16dp</item>
+    </style>
 </resources>
